src/components/Header/Navigation/Navigation.scss
@import '../../../styles/mixin.scss';

@import '../../../styles/var.scss';

@import '../../../styles/paragraph.scss';

.navigation {
  $transition: all 0.3s;
  $btnSize: 30px;

  &__group {

    @include flex(row, center, center);

    &__link {

      @extend .paragraph-l;
      margin: 0.625rem 1.09375rem;
      color: $color-dark-s;

      a {
        padding: 0.375rem 0 0.625rem;
      }

      &:hover {
        color: $color-light-s;
      }

      &:first-child {
        margin-left: 0;
      }

      &:last-child {
        margin-right: 0;
      }
    }
  }

  .link--active {
    color: $color-light-s;

    a {
      border-bottom: 3px solid $color-primary;
    }
  }

  &__btn {
    display: none;
    overflow: hidden;
    cursor: pointer;
  
    @include size($btnSize);
  
    &__line,
    &__line::after,
    &__line::before {
      background-color: $color-primary-light;
      border-radius: 10px;
    }
  
    &__line {
      position: relative;
      transition: $transition 0.5s;
  
      @include size(100%, 10%);
  
      &::after,
      &::before {
        position: absolute;
        left: 0;
        content: '';
  
        @include size(100%);
      }
  
      &::after {
        top: ($btnSize * 0.45);
        transition: $transition 0.3s; 
      }
  
      &::before {
        top: ($btnSize * 0.9);
        transition: $transition 0.1s; 
      }

      .menu-btn--active & {
        transition: $transition 0.1s;
        cursor: pointer;
        
        @include size(100%);
  
        &::after,
        &::before { 
          top: 45%;
          height: 16%;
          background-color: $menu-btn-line; 
        }
  
        &::after {
          transition: $transition 0.3s;
          transform: rotateZ(45deg);
        }
      
        &::before {
          transition: $transition 0.5s;
          transform: rotateZ(-45deg);      
        }
      }
    }
  }
}

@media screen and (max-width: 767px) {

  .navigation {
    $transition-dur: 0.8s;
    $menu-border: 1px solid;

    &__btn {
      display: block;
    }

    &__group {
      position: absolute;
      top: 100%;
      left: 100vw;
      flex-direction: column;
      width: 100%;
      border-top: $menu-border;
      border-bottom: $menu-border;
      transition: left $transition-dur, visibility 0s $transition-dur;
      visibility: hidden;

      .menu-btn--active & {
        left: 0;
        transition: left $transition-dur, visibility 0s;
        visibility: visible;
      }

      &__link {
        margin: 0.625rem 0;
      }
    }
  }
}

